--- a/examples/ode_lotka.html
+++ b/examples/ode_lotka.html
@@ -20,7 +20,7 @@ function setup()
             ncol : 64,            
             nrow : 64,		            // dimensions of the grid to build
             wrap : [true, true],       // Wrap boundary [COLS, ROWS]   
-            scale : 3				    // scale of the grid (nxn pixels per CA cell
+            scale : 3				    // scale of the grid (nxn pixels per grid cell
                    // colourRamp extrapolates a spectrum of colours between the first and second RGB values
     }
 
