--- a/examples/ode_turing.html
+++ b/examples/ode_turing.html
@@ -20,7 +20,7 @@ function setup()
             ncol : 200,            
             nrow : 100,		            // dimensions of the grid to build
             wrap : [true,true],       // Wrap boundary [COLS, ROWS]   
-            scale : 1,				    // scale of the grid (nxn pixels per CA cell
+            scale : 1,				    // scale of the grid (nxn pixels per grid cell
             show_gridname: true,
             graph_interval: 1,
             graph_update: 5
