--- a/examples/prime.html
+++ b/examples/prime.html
@@ -20,7 +20,7 @@ function setup()
             sleep: 200,
             fastmode: true,                           // Ironically, to slow down the FPS, you have to be in fast mode :D            
             wrap : [true, true],                      // Wrap boundary [COLS, ROWS]
-            scale : 2,				                  // scale of the grid (nxn pixels per CA cell)
+            scale : 2,				                  // scale of the grid (nxn pixels per grid cell)
             statecolours: {'alive':'white'}                 // States as shown on coloured pixels on canvas, can be either a single value or a dictionary of key,value pairs
     }
 
