--- a/examples/spirals.html
+++ b/examples/spirals.html
@@ -19,7 +19,7 @@ function setup()
             ncol : 200,            
             nrow : 200,		                        // dimensions of the grid to build
             wrap : [true, true],                    // Wrap boundary [COLS, ROWS]   
-            scale : 2,				                // scale of the grid (nxn pixels per CA cell)
+            scale : 2,				                // scale of the grid (nxn pixels per grid cell)
             statecolours: {colour:'default'}        // Default colours if left empty (see variable 'default_colours')
     }
 
