--- a/examples/petridish.html
+++ b/examples/petridish.html
@@ -18,11 +18,11 @@ function setup()
             fastmode: true,             // If possible, fast-mode will update the model with more than 60 FPS. 
                                         // Note: fastmode is only useful/recommended if the model can readily run 
                                         // at 60FPS without fast-mode, and may actually reduce the reported FPS
-                                        // Nevertheless, the final state of the CA is reaches sooner in real time. 
+                                        // Nevertheless, the final state of the grid is reaches sooner in real time. 
             ncol : 200,            
             nrow : 200,		            // dimensions of the grid to build
             wrap : [true, false],       // Wrap boundary [COLS, ROWS]   
-            scale : 2,				    // scale of the grid (nxn pixels per CA cell)
+            scale : 2,				    // scale of the grid (nxn pixels per grid cell)
             statecolours: {'alive':{1:'#AAAA00'}}   // The background state '0' is never drawn
     }
 
@@ -45,8 +45,8 @@ function setup()
         }
         else
         {
-            //let neighbours = model.cells.countMoore8(this,i,j,1,'alive')              // In the Moore8 neighbourhood of this CA count # of 1's for the 'alive' property        
-            let neighbour = model.cells.randomMoore8(this,i,j)              // In the Moore8 neighbourhood of this CA count # of 1's for the 'alive' property        
+            //let neighbours = model.cells.countMoore8(this,i,j,1,'alive')              // In the Moore8 neighbourhood of this grid count # of 1's for the 'alive' property        
+            let neighbour = model.cells.randomMoore8(this,i,j)              // In the Moore8 neighbourhood of this grid count # of 1's for the 'alive' property        
             if (neighbour.alive == 1 && model.rng.genrand_real1() < birth_rate)                        
                 this.grid[i][j].alive = 1;
         }
