--- a/examples/ode_serial_transfer.html
+++ b/examples/ode_serial_transfer.html
@@ -43,6 +43,7 @@ function setup()
     model.makeGrid("cells"); 
     model.makeGrid("resource_e"); 
     model.makeGrid("resource_i"); 
+    // model.displayGrid("resources_e","conc")
     model.resource_e.colourRamp('conc',[0,0,0],[64, 224, 208],100)
     model.resource_i.colourRamp('conc',[0,0,0],[240,200,0],100)
     
