Added a bundle compiler script

--- a/examples/cheater.html
+++ b/examples/cheater.html
@@ -24,7 +24,7 @@ Apart from this difference, the HTML file is identical.
 <script src="cheater.js"> </script>
 
 <body onload="setup()">        
-    <div class="header" id="header"><h2>ModelJS - </h2></div>
+    <div class="header" id="header"><h2>Cacatoo </h2></div>
     <div class="content" id="canvas_holder"></div>
     <div class="content" id="form_holder"></div>
     <div class="content" id="graph_holder"></div>
