--- a/examples/gol.html
+++ b/examples/gol.html
@@ -34,9 +34,7 @@ function setup()
     }
 
     sim = new Simulation(config)
-
-    sim.makeGridModel("gol");  
-        
+    sim.makeGridModel("gol")
     sim.initialGrid(sim.gol,'alive',1,0.5)        
     sim.createDisplay("gol","alive")        // Sets up the display to be shown when the model is running
     
