--- a/examples/cheater.html
+++ b/examples/cheater.html
@@ -26,9 +26,10 @@ Apart from this difference, the HTML file is identical.
 <body onload="setup()">        
     <div class="header" id="header"><h2>Cacatoo </h2></div>
     <div class="content" id="canvas_holder"></div>
-    <div class="content" id="form_holder"></div>
-    <div class="content" id="graph_holder"></div>
+    <div class="content" id="form_holder"><img src="../images/cheater.png" width=900><br><br></div>    
+    <div class="content" id="graph_holder"></div>    
     <div class="footer" id="footer"></div>
+    <div class="output" id="output"></div>
 </body>
 
 </html>
