Added documentation to all classes and functions

--- a/examples/cheater.html
+++ b/examples/cheater.html
@@ -23,7 +23,7 @@ Apart from this difference, the HTML file is identical.
 <!-- Include your model code here -->
 <script src="cheater.js"> </script>
 
-<body onload="setup()">        
+<body onload="cacatoo()">        
     <div class="header" id="header"><h2>Cacatoo </h2></div>
     <div class="content">
         <table align="center" style="width:70%;">
