--- a/examples/gol.html
+++ b/examples/gol.html
@@ -1,8 +1,8 @@
 <!-- 
-This file shows the most easy use-case for the Cacatoo library. 
-It simply load the library and other dependencies using <script>
-tags, load some CSS-stylesheets for the GUI, and than starts 
-with defining the model. 
+    This file shows the most easy use-case for the Cacatoo library. 
+    It simply load the library and other dependencies using <script>
+    tags, load some CSS-stylesheets for the GUI, and than starts 
+    with defining the model. 
 -->
 
 <!--  ---------------Do not change the part below ------------------  -->
@@ -15,51 +15,72 @@ with defining the model.
 
 /*-----------------------Start user-defined code ---------------------*/
 
-let sim;
+let sim; // Declare a variable named "sim" globally, so that we can access our cacatoo-simulation from wherever we need. 
 
-function setup()
+/**
+* function cacatoo() contains all the user-defined parts of a cacatoo-model. Configuration, update rules, what is displayed or plotted, etc. It's all here.
+*/
+function cacatoo()
 {
-
-    let config = {
-            title: "Game of Life",
-            description: "Conway's Game of Life",
-            maxtime: 1000000,
-            fastmode: true,             // If possible, fast-mode will update the model with more than once before displaying the grid
-                                        // (note, the actualy FPS may drop below 60 fps when using fast mode)
-            ncol : 400,            
-            nrow : 170,		            // dimensions of the grid to build
-            wrap : [true, true],        // Wrap boundary [COLS, ROWS]   
-            scale : 2,				    // scale of the grid (nxn pixels per CA cell)
-            statecolours: {'alive':{1:'white'}},    // Only defining the "alive" state, while...
+    /*
+        1. First, let's build a configuration-object. Here we set how large the grid is, how long will it run, what colours will the critters be, etc. 
+    */
+    let config = {                                        
+            title: "Game of Life",                        // The name of your cacatoo-simulation
+            description: "Conway's Game of Life",         // And a description if you wish
+            maxtime: 1000000,                             // How many time steps the model continues to run
+            fastmode: true,                               // If possible, fast-mode will update the model more than once before displaying the grid
+                                                          // (note, the onscreen FPS may drop below 60 fps when using fast mode, although many more timesteps may be handled per second)
+            ncol : 400,                                   // Number of columns (width of your grid)
+            nrow : 170,		                              // Number of rows (height of your grid)
+            wrap : [true, true],                          // Wrapped boundary conditions? [COLS, ROWS]   
+            scale : 2,				                      // Scale of the grid (nxn pixels per grid point)
+            statecolours: {'alive':{1:'white'}},          // Colours for each state. Background (0) defaults to black. 
     }
 
-    sim = new Simulation(config)
-    sim.makeGridModel("gol")
-    sim.initialGrid(sim.gol,'alive',1,0.5)        
-    sim.createDisplay("gol","alive")        // Sets up the display to be shown when the model is running
+    /*
+        2. Now, let's use that configuration-object to generate a new Cacatoo simulation
+    */
+    sim = new Simulation(config)                          // Initialise the Cacatoo simulation
+    sim.makeGridmodel("gol")                              // Build a new Gridmodel within the simulation called "gol" (Game Of Life)
+    sim.initialGrid(sim.gol,'alive',1,0.5)                // Set half (50%) of the Gridmodel's grid points to 1 (alive)
+    sim.createDisplay("gol","alive")                      // Create a display so we can see our newly made gridmodel
     
-    sim.gol.nextState = function(i,j)       // Define the next-state function. This example is game of life
+    /*
+        3. Next, we need to define the nextState function. This function will be applied for each grid point when we will update the grid later. 
+    */
+    sim.gol.nextState = function(i,j)                   
     {   
-        // Count living neighbours
+        // This example uses the rules of game of life, which has the following three rules:
+        // i) A living cell surrounded by two or three living cells, stays alive. 
+        // ii) A living cell surrounded by any other number of cells, dies.
+        // iii) A dead cell surrounded by exactly three living cells, becomes alive. 
+
+        // So, first we need to know how many cells are alive around a grid point
         let neighbours = sim.gol.countMoore8(this,i,j,1,'alive')              // In the Moore8 neighbourhood of this CA count # of 1's for the 'alive' property        
-        // Get own state
+        // Then, let's see if this cell is dead or alive
         let state = this.grid[i][j].alive;            
-        // Apply the three rules of GoL
+        // Then, apply the rules of game of life shown above
         if(state == 0 && neighbours == 3)
-        {
             this.grid[i][j].alive = 1;
-        }
         else if(state == 1 && (neighbours < 2 || neighbours > 3))
             this.grid[i][j].alive = 0;
         else
             this.grid[i][j].alive = state;
     }
     
+    /*
+        4. Finally, we need to set the update-function, which will be applied to the whole grid each time step. For now, all we will do is call "synchronous", which
+        applies the next-state function shown above to each grid point. All cells are updated at the same time, rather than in turn (for this, use the function "asynchonous")
+    */
     sim.gol.update = function()
     {                                
         this.synchronous()         // Applied as many times as it can in 1/60th of a second
     }
 
+    /*
+        5. OPTIONAL: Now that we have everything setup, we can also add some interactive elements (buttons or sliders). See cheater.html for more examples of this. 
+    */
     sim.addPatternButton(sim.gol,'alive')
     sim.addButton("pause/continue",function() { sim.toggle_play()})
     sim.addButton("step",function() { sim.step(); sim.display()})
@@ -74,7 +95,7 @@ function setup()
 
 
 
-<body onload="setup()">        
+<body onload="cacatoo()">        
     <div class="header" id="header"><h2>Cacatoo </h2></div>
     <div class="content" id="canvas_holder"></div>
     <div class="content" id="form_holder"></div>
