--- a/examples/ode_turing.html
+++ b/examples/ode_turing.html
@@ -9,7 +9,7 @@
 
 let sim;
 
-function setup()
+function cacatoo()
 {
 
     let config = {
@@ -29,7 +29,7 @@ function setup()
 
     sim = new Simulation(config)
 
-    sim.makeGridModel("turing") 
+    sim.makeGridmodel("turing") 
     sim.turing.colourViridis("activator", 100)
     sim.createDisplay('turing','activator')
 
@@ -121,7 +121,7 @@ function setup()
 
 
 
-<body onload="setup()">
+<body onload="cacatoo()">
     <div class="header" id="header"></div>
     <div class="content" id="canvas_holder">  </div>
     <div class="content" id="form_holder">  </div>
