--- a/examples/gol.html
+++ b/examples/gol.html
@@ -23,7 +23,7 @@ let sim; // Declare a variable named "sim" globally, so that we can access our c
 function cacatoo()
 {
     /*
-        1. First, let's build a configuration-object. Here we set how large the grid is, how long will it run, what colours will the critters be, etc. 
+        1. SETUP. First, set up a configuration-object. Here we define how large the grid is, how long will it run, what colours will the critters be, etc. 
     */
     let config = {                                        
             title: "Game of Life",                        // The name of your cacatoo-simulation
@@ -39,7 +39,7 @@ function cacatoo()
     }
 
     /*
-        2. Now, let's use that configuration-object to generate a new Cacatoo simulation
+        1. SETUP. (continued) Now, let's use that configuration-object to generate a new Cacatoo simulation
     */
     sim = new Simulation(config)                          // Initialise the Cacatoo simulation
     sim.makeGridmodel("gol")                              // Build a new Gridmodel within the simulation called "gol" (Game Of Life)
@@ -47,7 +47,7 @@ function cacatoo()
     sim.createDisplay("gol","alive")                      // Create a display so we can see our newly made gridmodel
     
     /*
-        3. Next, we need to define the nextState function. This function will be applied for each grid point when we will update the grid later. 
+        2. DEFINING THE RULES. Below, the user defines the nextState function. This function will be applied for each grid point when we will update the grid later. 
     */
     sim.gol.nextState = function(i,j)                   
     {   
@@ -70,7 +70,7 @@ function cacatoo()
     }
     
     /*
-        4. Finally, we need to set the update-function, which will be applied to the whole grid each time step. For now, all we will do is call "synchronous", which
+        3. MAIN SIMULATION LOOP. Finally, we need to set the update-function, which is the mainwill be applied to the whole grid each time step. For now, all we will do is call "synchronous", which
         applies the next-state function shown above to each grid point. All cells are updated at the same time, rather than in turn (for this, use the function "asynchonous")
     */
     sim.gol.update = function()
@@ -79,7 +79,7 @@ function cacatoo()
     }
 
     /*
-        5. OPTIONAL: Now that we have everything setup, we can also add some interactive elements (buttons or sliders). See cheater.html for more examples of this. 
+        OPTIONAL: Now that we have everything setup, we can also add some interactive elements (buttons or sliders). See cheater.html for more examples of this. 
     */
     sim.addPatternButton(sim.gol,'alive')
     sim.addButton("pause/continue",function() { sim.toggle_play()})
